--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     <a href="https://kovacsalexandru77.github.io/Moviedr/" target="_blank">
       <img src="https://ia601901.us.archive.org/27/items/aaa_20250423/aaa.png" alt="NetFlix" width="24" height="24" style="vertical-align: middle;">
     </a>
-    <a href="https://kovacsalexandru77.github.io/Movidr/" target="_blank"><i class="bi bi-house"></i></a>
+    <a href="https://kovacsalexandru77.github.io/Moviedr/" target="_blank"><i class="bi bi-house"></i></a>
     <a href="https://kovacsalexandru77.github.io/Mofilmek" target="_blank"><i class="bi bi-film"></i></a>
     <a href="https://kovacsalexandru77.github.io/Moorozat" target="_blank"><i class="bi bi-collection-play"></i></a>
   </div>
